fix carousel overflow

--- a/BookingTickets/wwwroot/css/site.css
+++ b/BookingTickets/wwwroot/css/site.css
@@ -165,7 +165,11 @@ body {
 
 /* Movie Carousel */
 
-#movie-carousel .movie-cover img{
+#movie-carousel{
+    overflow: hidden
+}
+
+#movie-carousel .movie-carousel__item img{
     margin: auto;
     width: 180px;
 }
@@ -175,7 +179,7 @@ body {
 }
 
 @media screen and (max-width: 1200px) {
-    #movie-carousel .movie-cover img {
+    #movie-carousel .movie-carousel__item img {
         width: 130px;
     }
 
@@ -185,7 +189,7 @@ body {
 }
 
 @media screen and (max-width: 768px){
-    #movie-carousel .movie-cover img {
+    #movie-carousel .movie-carousel__item img {
         width: 100px;
     }
 
@@ -200,7 +204,7 @@ body {
 }
 
 /* movie-list */
-.land-movie-list .list-header, .land-movie-list .item {
+.movie-list.movie-list--land .movie-list__header, .movie-list.movie-list--land .movie-list__item {
     flex: 0 0 250px;
     max-width: 250px;
     height: 150px;
@@ -208,21 +212,21 @@ body {
     
 }
 
-.land-movie-list, .port-movie-list{
+.movie-list.movie-list--land, .movie-list.movie-list--port{
     overflow-x:auto;
 }
 
-.land-movie-list .item{
-    background-size:cover;
+.movie-list.movie-list--land .movie-list__item {
+    background-size: cover;
 }
 
-.land-movie-list .item a {
+.movie-list.movie-list--land .movie-list__item a {
     font-size: 22px;
     -webkit-text-stroke-width: 0.5px;
     -webkit-text-stroke-color: gray;
 }
 
-.port-movie-list .list-header, .port-movie-list .item {
+.movie-list.movie-list--port .movie-list__header, .movie-list.movie-list--port .movie-list__item {
     flex: 0 0 120px;
     max-width: 120px;
     height: 180px;
@@ -232,30 +236,24 @@ body {
     line-height: 180px;
 }
 
-@media screen and (max-width: 480px) {
-    .port-movie-list .list-header {
-        height: 150px;
-    }
-
-    #movie-carousel .movie-cover.slick-current img {
-        height: 220px;
-    }
-}
-
 
 @media screen and (max-width: 480px){
 
-    .land-movie-list .list-header, .land-movie-list .item {
+    .movie-list.movie-list--land .movie-list__header, .movie-list.movie-list--land .movie-list__item {
         flex: 0 0 180px;
         max-width: 180px;
         height: 100px;
     }
 
-    .land-movie-list .list-header h2{
+    .movie-list.movie-list--land .movie-list__header h2 {
         font-size: 20px;
     }
 
-    .port-movie-list .list-header, .port-movie-list .item {
+    .movie-list.movie-list--port .movie-list__header {
+        height: 150px;
+    }
+
+    .movie-list.movie-list--port .movie-list__header, .movie-list.movie-list--port .movie-list__item {
         flex: 0 0 100px;
         max-width: 100px;
         height: 150px;
